--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -41,7 +41,7 @@ extra:
     - icon: fontawesome/brands/twitter
       link: https://twitter.com/AchterRudolf
     - icon: fontawesome/brands/github
-      link: https://github.com/RudolfAchter
+      link: https://github.com/RudolfAchter/chiania
     - icon: fontawesome/brands/mixcloud
       link: https://www.mixcloud.com/darul79/
     - icon: fontawesome/brands/keybase
