--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -71,6 +71,8 @@ markdown_extensions:
 
 extra_javascript:
   - https://unpkg.com/mermaid@8.13.10/dist/mermaid.min.js
+  - include/jquery-3.6.0.min.js
+  - include/extra.js
 
 plugins:
   - search:
