--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -71,7 +71,7 @@ markdown_extensions:
           format: !!python/name:pymdownx.superfences.fence_code_format
 
 extra_javascript:
-  - https://unpkg.com/mermaid@8.13.10/dist/mermaid.min.js
+  - include/mermaid.min.js
   - include/jquery-3.6.0.min.js
   - include/extra.js
 
