--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -31,7 +31,8 @@ theme:
       - toc.integrate
       - navigation.instant
       - navigation.tabs
-      - navigation.expand
+      - navigation.indexes
+      #- navigation.expand
       - navigation.top
 extra:
   tags:
